--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <div>
       <nav class="nav collapsible">
-        <a class="nav__brand" href="/"
-          ><img src="images/logo.svg" alt="Moshify Logo"
+        <a aria-label="Moshify" class="nav__brand" href="/"
+          ><img src="images/logo.svg"
         /></a>
         <svg class="icon icon--white nav__toggler">
           <use href="images/sprite.svg#menu"></use>
@@ -78,6 +77,7 @@
       </div>
       <div class="input-group">
         <input
+          aria-label="Domain"
           type="text"
           class="input"
           placeholder="Enter the domain name here..."
@@ -331,10 +331,14 @@
         <div class="card testimonial">
           <div class="grid grid--1x2">
             <div class="testimonial__image">
-              <img
-                src="images/testimonial.jpg"
-                alt="A happy, smiling customer"
-              />
+              <picture>
+                <source type="image/webp" srcset="images/testimonial.webp" />
+                <source type="image/jpg" srcset="images/testimonial.jpg" />
+                <img
+                  src="images/testimonial.jpg"
+                  alt="A happy, smiling customer"
+                />
+              </picture>
               <span class="icon-container icon-container--accent">
                 <svg class="icon icon--small icon--white">
                   <use href="images/sprite.svg#quotes"></use>
